<resources>
    <string name="app_name">Prophet-List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="tag">Tag</string>
    <string name="time">Notification Time </string>

    <!--menu string-->
    <string name="menu_about">About</string>
    <string name="about_author">
        Author : \n\n
        FCU IECS\n
        1042 MOBILE APPLICATION PROGRAMMING\n\n
        Group 21\n
        D0308897 gazer099\n
        D0178526 jimmy820904\n
        D0341583 nori243\n
        D0381955 HsintzuWong\n
    </string>
    <string name="about_ok">OK</string>

    <!--menu string-->
    <string name="menu_user">User</string>
    <string name="menu_company">Company</string>
    <string name="menu_school">School</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_tag">Tag</string>
    <string name="menu_done">Done</string>
    <string name="menu_setting">Setting</string>

    <!--newTask string-->
    <string name="newTask_title">New Task</string>
    <string name="newTask_tag">Tag</string>
    <string name="newTask_noti">Notification</string>
    <string name="newTask_content">content</string>
    <string name="newTask_create">create</string>
    <string name="newTask_setdate">Set Date</string>
    <string name="newTask_settime">Set Time</string>
    <string name="newTask_notification">Notification</string>

    <!--tag_data string-->
    <string name="tag_none">None</string>


    <!--requestCode error-->
    <string name="requestCode_err">Request code error</string>

    <!--delete item-->
    <string name="delete">Delete</string>
    <string name="delete_ask_message">Are you sure?</string>
    <string name="sure_btn">Delete</string>
    <string name="edit_btn">Edit</string>
    <string name="no_btn">No</string>
    <string name="empty_content">input can\'t be empty.</string>

    <!--user data -->
    <string name="user_name"> user name: </string>
    <string name="user_email"> email address: </string>
    <string name="user_phone"> phone number: </string>
    <string name="user_level"> VIP level: </string>
    <string name="user_default"> none </string>

    <string name="title_activity_drawer_setting">drawer_setting</string>

</resources>
