<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="team.prophet.a3104.prophet_list.newTask">

    <EditText android:id="@+id/et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTask_title"
        android:textSize="32sp"
        />


    <TextView android:id="@+id/tv_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTask_tag"
        android:textSize="20sp"
        android:layout_below="@id/et_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        />

    <Spinner android:id="@+id/sp_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tag"
        android:entries="@array/tag_label"
        />

    <TextView android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTask_content"
        android:textSize="20sp"
        android:layout_below="@id/sp_tag"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/tv_content"
        android:inputType="textMultiLine"
        />

    <Button android:id="@+id/btn_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newTask_create"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/btn_setdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTask_setdate"
        android:layout_marginStart="26dp"
        android:layout_alignTop="@+id/btn_settime"
        android:layout_toEndOf="@+id/tv_content" />

    <Button
        android:id="@+id/btn_settime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newTask_settime"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/et_content"
        android:layout_toEndOf="@+id/et_title"
        android:layout_marginStart="37dp" />


</RelativeLayout>
